--- a/currency_calculator.html
+++ b/currency_calculator.html
@@ -19,7 +19,7 @@
     -->
     <!--currency calculater using module-->
     <body>
-        <div data-ng-app="calculater" ng-controller="myctrl">
+        <div ng-app="calculater" ng-controller="myctrl">
             <h3>currency converter</h3>
             quantity: <input type="number" ng-model="quantity">
             dollar rate:<input type="number" ng-model="cost">
