--- a/my_directive.html
+++ b/my_directive.html
@@ -10,6 +10,7 @@
             var app = angular.module("myApp",[]);
             app.directive("myDirective", function(){
                 return {
+                    restrict : restrict: 'E',
                     template : "<h1>made by a directive!</h1>"
                 };
             });
