--- a/ng-repeat.html
+++ b/ng-repeat.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <!--
-        <div ng-app="" ng-init="name=['vaibhav','aman','ankit']">
+        <div ng-app="" ng-init="name=['vaibhav','aman','ankit','Prashant']">
             <p>this is the example of looping with ng-repeat:</p>
             <ul>
                 <li ng-repeat="x in name">
