--- a/demo.html
+++ b/demo.html
@@ -11,6 +11,7 @@
             <p>hello {{ name }} </p>
         </div>
         -->
+        <!--comment-->
         <div ng-app="1">
                 <table border="1">
                     <tr>
